--- a/slytherin/Harrypotter_Slytherin.html
+++ b/slytherin/Harrypotter_Slytherin.html
@@ -77,7 +77,7 @@
     }
     </script>
 
-<div class="back"><a href="../home/home.html">zur&uuml;ck zu Homeseite</a></div>
+<div class="back"><a href="../index.html">zur&uuml;ck zu Homeseite</a></div>
 </body>
 
 </html>
