--- a/gryffindor/Harrypotter_Gryffindor.html
+++ b/gryffindor/Harrypotter_Gryffindor.html
@@ -80,7 +80,7 @@
     }
     </script>
     
-    <div class="back"><a href="../home/home.html">zur&uuml;ck zu Homeseite</a></div>
+    <div class="back"><a href="../index.html">zur&uuml;ck zu Homeseite</a></div>
 
 </body>
 
